sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              IMAGE GENERATION                               */
/* ========================================================================== */

/* ====================  Configuration Structures  =========================== */

/** Image generation sampling parameters */
typedef struct {
    const char* method;         /* Sampling method: "ddim", "ddpm", etc. */
    int32_t     steps;          /* Number of denoising steps */
    float       guidance_scale; /* Classifier-free guidance scale */
    float       eta;            /* DDIM eta parameter */
    int32_t     seed;           /* Random seed (-1 for random) */
} ml_ImageSamplerConfig;
/** Diffusion scheduler configuration */
typedef struct {
    const char* type;                /* Scheduler type: "ddim", etc. */
    int32_t     num_train_timesteps; /* Training timesteps */
    int32_t     steps_offset;        /* An offset added to the inference steps */
    float       beta_start;          /* Beta schedule start */
    float       beta_end;            /* Beta schedule end */
    const char* beta_schedule;       /* Beta schedule: "scaled_linear" */
    const char* prediction_type;     /* Prediction type: "epsilon", "v_prediction" */
    const char* timestep_type;       /* Timestep type: "discrete", "continuous" */
    const char* timestep_spacing;    /* Timestep spacing: "linspace", "leading", "trailing" */
    const char* interpolation_type;  /* Interpolation type: "linear", "exponential" */
    ml_Path     config_path;         /* Optional config file path */
} ml_SchedulerConfig;
/** Image generation configuration */
typedef struct {
    const char**          prompts;               /* Required positive prompts */
    int32_t               prompt_count;          /* Number of positive prompts */
    const char**          negative_prompts;      /* Optional negative prompts */
    int32_t               negative_prompt_count; /* Number of negative prompts */
    int32_t               height;                /* Output image height */
    int32_t               width;                 /* Output image width */
    ml_ImageSamplerConfig sampler_config;        /* Sampling parameters */
    ml_SchedulerConfig    scheduler_config;      /* Scheduler configuration */
    float                 strength;              /* Denoising strength for img2img */
} ml_ImageGenerationConfig;
typedef struct ml_ImageGen ml_ImageGen; /* Opaque image generator handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating an image generator */
typedef struct {
    const char*    model_name;            /** Name of the model */
    ml_Path        model_path;            /** Path to the model file */
    ml_ModelConfig config;                /** Model configuration */
    ml_Path        scheduler_config_path; /** Path to the scheduler config file */
    ml_PluginId    plugin_id;             /** Plugin to use for the model */
    const char*    device_id;             /** Device to use for the model, NULL for default device */
} ml_ImageGenCreateInput;
/**
 * @brief Create and initialize an image generator instance
 *
 * @param input[in]: Input parameters for the image generator creation
 * @param out_handle[out]: Pointer to the image generator handle. Must be freed with ml_imagegen_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_imagegen_create(const ml_ImageGenCreateInput* input, ml_ImageGen** out_handle);
/**
 * @brief Destroy image generator instance and free associated resources
 *
 * @param handle[in]: The image generator handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_imagegen_destroy(ml_ImageGen* handle);
/* ====================  Image Generation  ================================== */

/** Input structure for text-to-image generation */
typedef struct {
    const char*                     prompt_utf8; /** Text prompt in UTF-8 encoding */
    const ml_ImageGenerationConfig* config;      /** Image generation configuration */
    ml_Path                         output_path; /** Optional output file path (NULL for auto-generated) */
} ml_ImageGenTxt2ImgInput;
/** Input structure for image-to-image generation */
typedef struct {
    ml_Path                         init_image_path; /** Path to initial image file for img2img */
    const char*                     prompt_utf8;     /** Text prompt in UTF-8 encoding */
    const ml_ImageGenerationConfig* config;          /** Image generation configuration */
    ml_Path                         output_path;     /** Optional output file path (NULL for auto-generated) */
} ml_ImageGenImg2ImgInput;
/** Output structure for image generation */
typedef struct {
    ml_Path output_image_path; /** Path where the generated image will be saved (caller must free with ml_free) */
} ml_ImageGenOutput;
/**
 * @brief Generate image from text prompt and save to filesystem
 *
 * @param handle[in]: Image generator handle
 * @param input[in]: Input parameters for text-to-image generation
 * @param output[out]: Output data containing the path where the generated image is saved
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_imagegen_txt2img(
    ml_ImageGen* handle, const ml_ImageGenTxt2ImgInput* input, ml_ImageGenOutput* output);
/**
 * @brief Generate image from initial image file and prompt, save to filesystem
 *
 * @param handle[in]: Image generator handle
 * @param input[in]: Input parameters for image-to-image generation (includes initial image path)
 * @param output[out]: Output data containing the path where the generated image is saved
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_imagegen_img2img(
    ml_ImageGen* handle, const ml_ImageGenImg2ImgInput* input, ml_ImageGenOutput* output);